--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "server-destroy": "^1.0.1",
     "underscore": "^1.9.1",
     "winston": "^3.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
