--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "server-destroy": "^1.0.1",
     "underscore": "^1.9.1",
     "winston": "^3.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.6.1"
   }
 }
